--- a/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
+++ b/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
@@ -110,6 +110,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IChannelsService.cs" />
+    <Compile Include="Services\ISparkClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
