Add users controller. Fix Webhook

--- a/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
+++ b/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\WebhookController.cs" />
     <Compile Include="Controllers\WebhookManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -114,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ch-channel-spark - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
