--- a/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
+++ b/ChatFirst.Channels.Spark/ChatFirst.Channels.Spark.csproj
@@ -103,12 +103,18 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\PushController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\WebhookController.cs" />
     <Compile Include="Controllers\WebhookManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CoreHelpers.cs" />
+    <Compile Include="Models\Entity.cs" />
+    <Compile Include="Models\InputMessage.cs" />
+    <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\OutputMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IChannelsService.cs" />
     <Compile Include="Services\ISparkClient.cs" />
@@ -125,7 +131,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
